--- a/blog/019.md
+++ b/blog/019.md
@@ -7,4 +7,20 @@ _2015-06-02 11:42:04_
 
 * * *
 
-content
+大家尽量看全我的文章
+
+我的物理机安装的是Win7操作系统
+
+工作开发选的是目前最新版本CentOS7操作系统
+
+由于是开发网络服务端应用程序，也就是说要给CentOS增加一个内网IP，方便客户端连接测试
+
+由于是代码开发，物理机与虚拟机之间复制代码，复制文件，在很多情况下是常有的事情，所以VMware提供的拖动复制功能就显得格外重要
+
+首先虚拟机安装操作系统我就不再说了，安装完成后虚拟机会默认增加一个网络适配器，选择的是NAT模式，当然若是想实现我上面的需求，这个是肯定满足不了的，当然你的虚拟机若是想有上网的功能，这个就保留吧，这个若开启你的虚拟机应该就能拖动复制，还有上网的能力，若不是这样的话，你肯定是那里姿势不对。
+
+这里我要增加一个桥接模式的网络适配器来给虚拟机增加一个内网IP，事实证明，增加完成后内网之间互相通信确实得到实现，悲剧的是你的虚拟机与物理机之间再也没有办法通过拖动复制文件啦，问题出在那里我也不清楚，但是经过一上午美好光阴的各种反复不停的测试我坚信就是在增加桥接模式适配器的时候，它们之间就再也不能拖动复制了，然后我就认真看这个网卡的配置项（当然这个在CentOS可视化操作界面里），你添加的网卡-配置-IPV4-仅对此网络上的资源使用此连接（不好意思，为了方便我安装的是中文版，这在那个配置项的最下面）前面的对勾你打上，之后就实现上面的需求了。
+
+说个大家不要骂我的，其实是不是它的功劳，我现在还不太敢确定，因为我暂时已经不再想尝试了，等以后我有需要我会按照这个流程配置，再来证明它的正确性。
+
+没有想到我很快的就证明了它的错误性，后来我又怎么配置都不行了，最后我的办法是恢复到我刚装好系统时的一个快照，虚拟机关机，这个时候增加桥接模式适配器，虚拟机开机，这个时候依然是可以拖动复制的，取消新增加适配器的开机连接，配置内网IP，测试内网互通，这个时候依然是可以拖动复制的，最后再重启，还是一样，问题就这样解决了，可见我是搞了多么大的一个乌龙，怪不得百度和我出一样问题的少之又少，因为这是一个低级错误吧。
